; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_IPC.c_IPCDhcpFreeIP.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_IPC.c_IPCDhcpFreeIP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@DHCP_RELEASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IPCDhcpFreeIP(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = call i32 (...) @Rand32()
  store i32 %7, i32* %6, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  br label %27

14:                                               ; preds = %10
  %15 = call i32 @Zero(%struct.TYPE_5__* %5, i32 8)
  %16 = load i32, i32* @DHCP_RELEASE, align 4
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 1
  store i32 %16, i32* %17, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @IPToUINT(i32* %18)
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @IPCDhcpSetConditionalUserClass(i32* %21, %struct.TYPE_5__* %5)
  %23 = load i32*, i32** %3, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @IPCSendDhcpRequest(i32* %23, i32* null, i32 %24, %struct.TYPE_5__* %5, i32 0, i32 0, i32* null)
  %26 = call i32 @FreeDHCPv4Data(i32 %25)
  br label %27

27:                                               ; preds = %14, %13
  ret void
}

declare dso_local i32 @Rand32(...) #1

declare dso_local i32 @Zero(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @IPToUINT(i32*) #1

declare dso_local i32 @IPCDhcpSetConditionalUserClass(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @FreeDHCPv4Data(i32) #1

declare dso_local i32 @IPCSendDhcpRequest(i32*, i32*, i32, %struct.TYPE_5__*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
